--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "scrypt-jane-sys/scrypt-jane"]
 	path = scrypt-jane-sys/scrypt-jane
-	url = git@github.com:floodyberry/scrypt-jane.git
+	url = https://github.com/floodyberry/scrypt-jane.git
